# meridian-workshop

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: mcp-config.json
.claude/agents/: code-reviewer.md  security-auditor.md  vue-expert.md
.claude/commands/: demo-branch.md  optimize.md  reset-branch.md  start.md  stop.md  test.md
.claude/hooks/: README.md  post-tool-use.sh
.claude/skills/backend-api-test/: SKILL.md
.claude/skills/out-of-office/: SKILL.md
client/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.js
client/src/: App.vue  api.js  main.js
client/src/components/: BacklogDetailModal.vue  CostDetailModal.vue  FilterBar.vue  InventoryDetailModal.vue  LanguageSwitcher.vue  ProductDetailModal.vue  ProfileDetailsModal.vue  ProfileMenu.vue  TasksModal.vue
client/src/composables/: useAuth.js  useFilters.js  useI18n.js
client/src/locales/: en.js  ja.js
client/src/utils/: currency.js
client/src/views/: Backlog.vue  Dashboard.vue  Demand.vue  (+5 more)
docs/rfp/: MC-2026-0417.md  meridian-background.md  vendor-handoff.md
proposal/: architecture.html  capabilities-deck.html  executive-summary.md  pricing.md  technical-approach.md  timeline.md
scripts/: start.sh  stop.sh
server/: CLAUDE.md  generate_data.py  main.py  mock_data.py  pyproject.toml  requirements.txt
server/data/: backlog_items.json  demand_forecasts.json  inventory.json  orders.json  spending.json  transactions.json
tests/: README.md  TEST_SUMMARY.md  pytest.ini
tests/backend/: conftest.py  test_dashboard.py  test_inventory.py  test_misc_endpoints.py
(+1 files in other folders)
